--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -57,9 +57,7 @@
 
     <div class="text1_position shadow text1_misure reveal">
       <div class="text text1_padding text_container path1">
-        Noi di taBÙM crediamo che l’educazione dei più piccoli sia di fondamentale importanza per riuscire ad affrontare argomenti con cui verranno inevitabilmente in contatto e con cui si sapranno rapportare solo
-        se avranno gli
-        strumenti adatti a capirli.
+        taBÙM è una casa editrice per i più piccoli che tratta con schietta naturalezza di argomenti che i grandi hanno paura di affrontare. Nei nostri libri raccontiamo storie di tutti i giorni,cercando di essere i più sinceri possibile e presentando la realtà dei fatti, accompagnando così il bambino nella sua crescita personale.
       </div>
 
 
@@ -80,9 +78,8 @@
 
 
       <div class="text2_position shadow text2_misure reveal">
-        <div class="text text2_padding text_container path2 reveal"> Noi di taBÙM crediamo che l’educazione dei più piccoli sia di fondamentale importanza per riuscire ad affrontare argomenti con cui
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di fondamentale importanza per riuscire ad affrontare argomenti con cui
-          Noi di taBÙM crediamo che l’educazione dei più piccoli sia di fondamentale importanza per riuscire ad affrontare argomenti con cui
+        <div class="text text2_padding text_container path2 reveal">
+          I tabù si rafforzano se li consideriamo come tali però, se sin dall’infanzia questi argomenti venissero trattati con fermezza e tranquillità, forse riusciremmo a capirli. Nessun tema è impossibile da spiegare ad un bambino, se solo si conoscesse il linguaggio giusto per farlo. Per educare i piccoli, bisogna prima insegnare ai grandi.
         </div>
 
 
