--- a/tabu.html
+++ b/tabu.html
@@ -170,7 +170,7 @@
 
         </div>
 
-        
+
 
       </div>
 
@@ -262,7 +262,7 @@
         </div>
 
         <div class="shadow_link">
-          <div class="link_padding_dx text_link link_container path_link_reverse">
+          <div class="link_padding_dx text_link link_container path_link">
 
             <a href="http://www.psicopedagogie.it/spiegare_morte_ai_bambini.html">Tibiletti, E. Perché si muore? <br> Come spiegare la morte ai bambini</a>
 
