--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -70,7 +70,7 @@
 
 
       <div class="immagine_1 reveal">
-        <img src="/tabum/immagini/Olivia.png">
+        <img src="immagini/Olivia.png">
       </div>
 
 
@@ -129,14 +129,14 @@
           <div class="scroll-personaggi">
 
             <div class="big-pers">
-              <img src="/tabum/immagini/Martino saluta.png">
+              <img src="immagini/Martino saluta.png">
             </div>
             <div class="text-pers very_little">
               Martino è un bambino introverso, spaventato dalle cose che non sa. Ci vuole sempre un po' per spingerlo ad essere coraggioso, ma alla fine grazie ai suoi amici riesce sempre.
             </div>
 
             <div class="big-pers">
-              <img src="/tabum/immagini/Olivia saluta.png">
+              <img src="immagini/Olivia saluta.png">
             </div>
 
             <div class="text-pers very_little">
@@ -144,7 +144,7 @@
             </div>
 
             <div class="big-pers">
-              <img src="/tabum/immagini/Edo saluta.png">
+              <img src="immagini/Edo saluta.png">
             </div>
 
             <div class="text-pers very_little">
@@ -171,11 +171,11 @@
     </div>
 
     <div class="box-logo">
-      <img src="/tabum/immagini/logo/logo_ta.png">
+      <img src="immagini/logo/logo_ta.png">
       <div class="text-pers very_little">
         questo è un bel testo
       </div>
-      <img src="/tabum/immagini/logo/logo_bum.png">
+      <img src="immagini/logo/logo_bum.png">
       <div class="text-pers very_little">
         questo è un bel testo
       </div>
@@ -183,7 +183,7 @@
 
   </div> -->
 
-  <img class="contatti_img" src="/tabum/immagini/prato fondale sito.png">
+  <img class="contatti_img" src="immagini/prato fondale sito.png">
 
   <div class="contatti">
     <div class="">
@@ -227,7 +227,7 @@
   </svg>
 
 
-  <script type="text/javascript" src="/tabum/script.js"></script>
+  <script type="text/javascript" src="script.js"></script>
 
 </body>
 
