--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <a href="./index.html">
   <div class="thome">
-    <img src="/tabum/immagini/tasto_home.png">
+    <img src="immagini/tasto_home.png">
   </div>
 </a>
 
@@ -9,8 +9,8 @@
 
 <div class="menu">
   <div class="tmenu">
-    <img class="tmenu_verse" src="/tabum/immagini/tasto_menu.png">
-    <img class="tmenu_reverse" src="/tabum/immagini/tasto_menu_reverse.png">
+    <img class="tmenu_verse" src="immagini/tasto_menu.png">
+    <img class="tmenu_reverse" src="immagini/tasto_menu_reverse.png">
   </div>
 
 <div class="shadow2">
