--- a/catalogo-mobile.html
+++ b/catalogo-mobile.html
@@ -212,6 +212,7 @@
     <img class="contatti_img" src="immagini/prato fondale sito2.png" />
 
     <div class="contatti">
+        <img class="insta" src="immagini/contatti/insta.png" />
       <img class="facebook" src="immagini/contatti/facebook.png" />
       <img class="mail" src="immagini/contatti/mail.png" />
       <div class="">
