--- a/chi-siamo-mobile.html
+++ b/chi-siamo-mobile.html
@@ -168,12 +168,11 @@
     <img class="contatti_img" src="immagini/prato fondale sito.png">
 
     <div class="contatti">
-      <div class="">
 
-      </div>
-      <img class="facebook" src="immagini/contatti/facebook.png">
-      <img class="mail" src="immagini/contatti/mail.png">
-      <img class="insta" src="immagini/contatti/insta.png">
+  <img class="insta" src="immagini/contatti/insta.png" />
+    <img class="facebook" src="immagini/contatti/facebook.png" />
+      <img class="mail" src="immagini/contatti/mail.png" />
+
       <div class="">
         taBùm editore <br> Via G. Candiani, 72 <br>20158, Milano, MI
       </div>
