--- a/nav.html
+++ b/nav.html
@@ -27,13 +27,13 @@
   </div>
 </div>
 <div class="shadow2">
-  <div class="botton3 path7 text_container2">
+  <div class="botton3 path9 text_container2">
     <a href="./catalogo.html"> Catalogo</a>
 
   </div>
 </div>
 <div class="shadow2">
-  <div class="botton4 path8 text_container2">
+  <div class="botton4 path10 text_container2">
     <a href="./tabu.html"> Tabù</a>
 
   </div>
@@ -49,11 +49,19 @@
   </clipPath>
 
   <clipPath id="svgPath7" clipPathUnits="objectBoundingBox">
-    <path d="M 0.91 .12 L 0 0.1 L 0 0.80 L .98 .94 Z" />
+    <path d="M 0.71 .12 L 0 0.1 L 0 0.80 L .58 .94 Z" />
   </clipPath>
 
   <clipPath id="svgPath8" clipPathUnits="objectBoundingBox">
+    <path d="M 0.87 .12 L 0.05 0.1 L 0 0.80 L .90 .94 Z" />
+  </clipPath>
+
+  <clipPath id="svgPath9" clipPathUnits="objectBoundingBox">
     <path d="M 0.91 .12 L 0.05 0.1 L 0 0.80 L .78 .94 Z" />
+  </clipPath>
+
+  <clipPath id="svgPath10" clipPathUnits="objectBoundingBox">
+    <path d="M 0.51 .12 L 0.05 0.1 L 0 0.80 L .58 .94 Z" />
   </clipPath>
 
 </svg>
