--- a/catalogo.html
+++ b/catalogo.html
@@ -84,11 +84,9 @@
           Se vuoi saperne di pi&ugrave..
         </div>
         <div class="scheda_container">
-          <div class="text_scheda">
+          <div class="text_scheda colonne" style="width:100%;">
 
             La morte è un argomento delicato e difficile da intraprendere. In questo libro parliamo ai bambini della morte nella maniera più naturale possibile. Abbiamo voluto trattarla come parte stessa e inevitabile della vita,
-          </div>
-          <div class="text_scheda">
 
             come qualcosa di irreversibile ma non spaventoso, e una volta superato il dolore della perdita la vita può e deve andare avanti.
           </div>
@@ -114,11 +112,10 @@
           Se vuoi saperne di pi&ugrave..
         </div>
         <div class="scheda_container">
-          <div class="text_scheda">
+          <div class="text_scheda colonne" style="width:100%;">
 
           In questo libro parleremo dell'orientamento sessuale e di famiglia. Sono due concetti molto importanti ed è bene che i bambini capiscano che sono anche molto ampi e che non esiste un giusto e
-          </div>
-          <div class="text_scheda">
+
 
           uno sbagliato ma che l'unica cosa importante è stare bene con gli altri e con noi stessi.
           </div>
@@ -144,11 +141,10 @@
           Se vuoi saperne di pi&ugrave..
         </div>
         <div class="scheda_container">
-          <div class="text_scheda">
+          <div class="text_scheda colonne" style="width:100%;">
 
             Le prime mestruazioni possono essere causa di forte imbarazzo, e possono creare situazioni scomode, soprattutto se non si ha presente cosa sta succedendo al proprio corpo.
-          </div>
-          <div class="text_scheda">
+
 
             In questo libro vogliamo chiarire in modo semplice cos'è il ciclo e spiegare che è normale e non una cosa di cui avere schifo o imbarazzo.
           </div>
@@ -174,11 +170,10 @@
           Se vuoi saperne di pi&ugrave..
         </div>
         <div class="scheda_container">
-          <div class="text_scheda">
+          <div class="text_scheda colonne" style="width:100%;">
 
           La prospettiva di andare dallo psicologo o di mandarci il proprio figlio può incutere timore. In questo libro cercheremo di far passare il concetto che andare dallo psicologo non
-          </div>
-          <div class="text_scheda">
+
 
           significa essere malato o debole, ma che è del tutto normale e soprattutto utile, ed è una cosa che facciamo per poter stare meglio.
           </div>
@@ -192,9 +187,10 @@
       <div class="">
 
       </div>
+      <img class="insta" src="immagini/contatti/insta.png" />
       <img class="facebook" src="immagini/contatti/facebook.png" />
       <img class="mail" src="immagini/contatti/mail.png" />
-      <img class="insta" src="immagini/contatti/insta.png" />
+
       <div class="">
         taBùm editore <br> Via G. Candiani, 72 <br>20158, Milano, MI
       </div>
