--- a/chi-siamo-mobile.html
+++ b/chi-siamo-mobile.html
@@ -135,7 +135,7 @@
           <div class="mobile-flex">
             <img src="immagini/Edo saluta.png">
             <div class="text-pers very_little path3">
-             Edo è il bambino è più sensibile, che si pone più domande e cerca conforto nell’adulto. È molto buono con tutti e non si tira mai indietro.
+             Edo è il bambino più sensibile, che si pone più domande e cerca conforto nell’adulto. È molto buono con tutti e non si tira mai indietro.
            </div>
           </div>
 
