--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -148,7 +148,7 @@
             </div>
 
             <div class="text-pers very_little">
-              Edo è il bambino è più sensibile, che si pone più domande e cerca conforto nell’adulto. È molto buono con tutti e non si tira mai indietro.
+              Edo è il bambino più sensibile, che si pone più domande e cerca conforto nell’adulto. È molto buono con tutti e non si tira mai indietro.
             </div>
 
           </div>
